--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -101,7 +101,7 @@
         </article>
         <article class="customer-review">
           <p>"This place is awesome!  We had a mini stay last year with my father in law, who is no longer with us.  Great memories and the people at White Birch were so accommodating.""</p>
-          <h5>-Miranda Wagner Henneman </h5>
+            <h5>-Miranda Wagner Henneman</h5>
         </article>
         <article class="customer-review">
           <p>"We have stayed at your resort twice so far and each stay has created so many great memories.  I think we are do for another family reunion!"</p>
@@ -139,6 +139,7 @@
             <article class="project-thumb">
               <img src="img/relaxoutdoors.jpg" alt="Relaxing Outdoors">
             </article>
+          </div>
       </section>
 
       <section class="map">
@@ -168,11 +169,12 @@
               State:<input type="text" name="State"><br>
               Zip:<input type="text" name="Zip"><br>
               Phone:<input type="text" name="Phone"><br>
-            </p>
             <p>
               <input type="submit" value="Submit">
             </p>
+          </form>
         </section>
+
       </footer>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
@@ -187,6 +189,7 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+</div>
 </body>
 
 </html>
